tests/paczka1/fuzzy1/19169375.err
Error in line 3: A619 S447 225,0
Error in line 5: A619 A673 45,1
Error in line 16: CyQYC S447 16,8
Error in line 19: 6hIMFHA2 S447 64,9
Error in line 15: aZk1 A619 65,4
